syntax = "proto3";

package pb;



//The Account service definition.
service Account {
 rpc Create   (CreateRequest  ) returns (CreateReply  );
 rpc Signin   (SigninRequest  ) returns (SigninReply  );
 rpc Signout  (SignoutRequest ) returns (SignoutReply );
 rpc Roles    (RolesRequest   ) returns (RolesReply   );
 rpc Auth     (AuthRequest    ) returns (AuthReply    );
 rpc UserInfo (UserInfoRequest) returns (UserInfoReply);
}

message CreateRequest {
 string email    = 1;
 string password = 2;
 string orgname  = 3;
}

message CreateReply {
 string uuid = 1;
}

message SigninRequest {
 string email    = 1;
 string password = 2;
}

message SigninReply {
 string token = 1;
}

message SignoutRequest {
 string token = 1;
}

message SignoutReply {
 bool result = 1;
}

message RolesRequest {
 string token = 1;
}

message RolesReply {
 repeated string roles = 1;
}

message AuthRequest {}

message AuthReply {
 string uuid        = 1;
 string namespaceID = 2;
 repeated string roles = 3;
}

message UserInfoRequest {}

message UserInfoReply {
  repeated string roles = 1;
  string orgName = 2;
}
