syntax = "proto3";

package pb;

//The Dashboard service definition.
service Dashboard {
 rpc GetGroups   (GetGroupsRequest  ) returns (GetGroupsReply  );
 rpc CreateGroup (CreateGroupRequest) returns (CreateGroupReply);
}

message GetGroupsRequest {
 string namespaceID = 1;
}

message GetGroupsReply {
 repeated Group groups = 1;
}

message Group {
 string name = 1;
 string desc = 2;
 string id = 3;
}

message CreateGroupRequest {
  string uuid = 1;
  string name = 2;
  string desc = 3;
  string namespaceID = 4;
}

message CreateGroupReply {
  Group group = 1;
}
